--- a/dotNetForumPresentation/Fixtures/Fixtures.csproj
+++ b/dotNetForumPresentation/Fixtures/Fixtures.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="8.0.4" />
+    <PackageReference Include="xunit.assert" Version="2.7.1" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.7.1" />
   </ItemGroup>
 
   <ItemGroup>
